--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,29 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.261
+head: 1.264
 branch:
 locks: strict
-	gilles: 1.261
+	gilles: 1.264
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 261;	selected revisions: 261
+total revisions: 264;	selected revisions: 264
 description:
 ----------------------------
-revision 1.261	locked by: gilles;
+revision 1.264	locked by: gilles;
+date: 2008/08/27 15:19:05;  author: gilles;  state: Exp;  lines: +7 -8
+Archiveopteryx 3.0.0
+----------------------------
+revision 1.263
+date: 2008/08/26 02:58:11;  author: gilles;  state: Exp;  lines: +59 -22
+Added modules versions output.
+----------------------------
+revision 1.262
+date: 2008/08/16 17:19:29;  author: gilles;  state: Exp;  lines: +6 -6
+Work fine under XP.
+----------------------------
+revision 1.261
 date: 2008/08/16 15:56:00;  author: gilles;  state: Exp;  lines: +32 -41
 - Fixed bug about ssl and justconnect option
 - Cleaned connect code.
