--- a/FAQ
+++ b/FAQ
@@ -58,6 +58,23 @@ R. - Download Mail::IMAPClient 2.2.9 at
      or if imapsync is in directory /path/
         perl -I./Mail-IMAPClient-2.2.9 /path/imapsync [...]
 
+
+
+=======================================================================
+Q. I am interested in creating  a local clone of the IMAP on a LAN 
+server for  faster synchronisations, Email will always be delivered 
+to the remote server and so the synchronisation will be one way from 
+remote to local. How suited is ImapSync to continouous one-way 
+synchronisation of mailboxes? Is there a better solution?
+
+R. If messages are delivered remotely and you play locally with the
+copy, in order to have fast access, then the synchronisation can't
+be one way. You may change flags, you may move messages in 
+different folders etc.
+
+A better tool with this scenario is offlineimap, 
+designed for this issue, and faster than imapsync.
+
 =======================================================================
 Q. We have found that the sent time and date have been changed to the 
    time at which the file was synchronised. 
