--- a/README
+++ b/README
@@ -3,11 +3,11 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.261 $
+    $Revision: 1.264 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
-     imapsync works fine under Windows 2000 (at least) and ActiveState's 5.8 Perl
+     imapsync works fine under Windows (2000, XP) and ActiveState's 5.8 Perl
 
      imapsync is already available directly on the following distributions (at least):
      FreeBSD, Debian, Ubuntu, Gentoo, NetBSD, Darwin, Mandriva and OpenBSD (yeah!).
@@ -247,7 +247,7 @@ IMAP SERVERS
     Success stories reported with the following 35 imap servers (softwares
     names are in alphabetic order) :
 
-     - Archiveopteryx 2.03, 2.04, 2.09, 2.10 [dest]
+     - Archiveopteryx 2.03, 2.04, 2.09, 2.10 [dest], 3.0.0 [dest]
        (OSL 3.0) http://www.archiveopteryx.org/
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
      - CommuniGatePro server (Redhat 8.0)
@@ -268,7 +268,7 @@ IMAP SERVERS
        2.0.7 seems buggy.
      - Deerfield VisNetic MailServer 5.8.6 [from]
      - Dovecot 0.99.10.4, 0.99.14, 0.99.14-8.fc4, 1.0-0.beta2.7, 
-       1.0.0 [dest] (LGPL) (http://www.dovecot.org/)
+       1.0.0 [dest/source] (LGPL) (http://www.dovecot.org/)
      - Domino (Notes) 4.61[from], 6.5, 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 7.0.1 [from]
      - Eudora WorldMail v2
      - GMX IMAP4 StreamProxy.
@@ -364,5 +364,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.261 2008/08/16 15:56:00 gilles Exp gilles $
+    $Id: imapsync,v 1.264 2008/08/27 15:19:05 gilles Exp gilles $
 
