--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,28 @@
-# $Id: INSTALL,v 1.13 2008/03/19 00:28:36 gilles Exp gilles $
+# $Id: INSTALL,v 1.14 2008/08/16 17:18:58 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
+
+INTRODUCTION
+------------
+
+ imapsync works fine under any Unix OS with perl.
+ imapsync works fine under Windows (2000, XP) and ActiveState's 5.8 Perl
+
+ imapsync is already available directly on the following distributions (at least):
+ FreeBSD, Debian, Ubuntu, Gentoo, NetBSD, Darwin, Mandriva and OpenBSD (yeah!).
+
+ Get imapsync at
+ http://www.linux-france.org/prj/imapsync/dist/
+
+ You'll find a compressed tarball called imapsync-x.xx.tgz
+ where x.xx is the version number. Untar the tarball where
+ you want (on Unix):
+
+ tar xzvf  imapsync-x.xx.tgz
+
+ Go into the directory imapsync-x.xx and read the INSTALL file.
+ You're already reading the INSTALL file.
 
 GETTING
 -------
