--- a/TODO
+++ b/TODO
@@ -1,6 +1,17 @@
 TODO file for imapsync
 ----------------------
 
+Add failure return code in case of 
+last FOLDER if $from->IsUnconnected();
+last FOLDER if   $to->IsUnconnected();
+See Phil Lobbes messages (18 Sep 2008)
+Subject: BUG: imapsync may silently disconnect leading to unmigrated data without warnings
+
+
+Remove --password secret  in outpout.
+
+Post on imapsync mailing-list  when a new release comes.
+
 Fix bad english language.
 
 Write to zimbra coders about the date presentation:
@@ -127,7 +138,8 @@ Explain expunge behavior.
 
 
 
-
+DONE. Add a better test to check non existing folders on destination
+server. (status and select are bad).
 
 DONE. Fix the buggy --include behavior with no --folder --folderrec or --subscribed.
 
