--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,29 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.264
+head: 1.267
 branch:
 locks: strict
-	gilles: 1.264
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 264;	selected revisions: 264
+total revisions: 267;	selected revisions: 267
 description:
 ----------------------------
-revision 1.264	locked by: gilles;
+revision 1.267
+date: 2008/10/07 11:36:02;  author: gilles;  state: Exp;  lines: +14 -10
+Better test to check non existing folders on destination
+server.
+----------------------------
+revision 1.266
+date: 2008/10/07 05:56:52;  author: gilles;  state: Exp;  lines: +27 -10
+*** empty log message ***
+----------------------------
+revision 1.265
+date: 2008/08/30 14:20:38;  author: gilles;  state: Exp;  lines: +7 -7
+carp to warn
+----------------------------
+revision 1.264
 date: 2008/08/27 15:19:05;  author: gilles;  state: Exp;  lines: +7 -8
 Archiveopteryx 3.0.0
 ----------------------------
