--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.264 $
+    $Revision: 1.267 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -364,5 +364,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.264 2008/08/27 15:19:05 gilles Exp gilles $
+    $Id: imapsync,v 1.267 2008/10/07 11:36:02 gilles Exp $
 
