--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,32 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.284
+head: 1.285
 branch:
 locks: strict
-	gilles: 1.284
+	gilles: 1.285
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 284;	selected revisions: 284
+total revisions: 285;	selected revisions: 285
 description:
 ----------------------------
-revision 1.284	locked by: gilles;
+revision 1.285	locked by: gilles;
+date: 2009/07/03 00:59:20;  author: gilles;  state: Exp;  lines: +38 -17
+Applied "patch -p0 < patches/imapsync.1.284.patch"
+Attached is a patch against 1.284 with the following changes:
+
+- [Bug] to_folder_name() failed to escape $f_prefix so --prefix1 <string> was treated like --prefix1 <regex> instead
+
+- [Enhancement] updated parse_header_msg1() to return 0 on duplicate or undef on "no header" so now the "+ Skipping msg" will show either "no header" or "duplicate" as appropriate
+
+- [Bug] flag handling: make sure we don't try to set \Recent as RFC 2060 doesn't allow for that
+
+- [Enhancement] flag handling: only add missing flags instead of always calling $to->store() to set flags even when the flags already matched what we wanted... my first patch just used string comparison, this patch actually uses a hash for comparison so we're smarter about flags even when the order on $from and $to are different now - definitely helps speed up imapsync when lots of messages have flags and running sync in multiple passes
+
+Phil
+----------------------------
+revision 1.284
 date: 2009/06/30 03:14:24;  author: gilles;  state: Exp;  lines: +15 -19
 allow Mail::IMAPClient 3.0.xx by default
 Removed Mail::IMAPClient::Ssl since 3.0.19 has it now.
