--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.285
+head: 1.286
 branch:
 locks: strict
-	gilles: 1.285
+	gilles: 1.286
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 285;	selected revisions: 285
+total revisions: 286;	selected revisions: 286
 description:
 ----------------------------
-revision 1.285	locked by: gilles;
+revision 1.286	locked by: gilles;
+date: 2009/07/24 15:53:04;  author: gilles;  state: Exp;  lines: +10 -7
+Bug fix: allow3x is on by default (was badly done after check_lib_version())
+----------------------------
+revision 1.285
 date: 2009/07/03 00:59:20;  author: gilles;  state: Exp;  lines: +38 -17
 Applied "patch -p0 < patches/imapsync.1.284.patch"
 Attached is a patch against 1.284 with the following changes:
