--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
 #!/bin/cat
-# $Id: TODO,v 1.64 2009/03/22 18:39:57 gilles Exp gilles $
+# $Id: TODO,v 1.65 2009/07/24 17:22:13 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
+
+Add more information about skipped messages.
 
 There was a time imapsync took the whole message when the
 header was bad (empty). But it was bad for speed with big
