--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,47 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.286
+head: 1.293
 branch:
 locks: strict
-	gilles: 1.286
+	gilles: 1.293
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 286;	selected revisions: 286
+total revisions: 293;	selected revisions: 293
 description:
 ----------------------------
-revision 1.286	locked by: gilles;
+revision 1.293	locked by: gilles;
+date: 2010/01/12 05:34:27;  author: gilles;  state: Exp;  lines: +6 -6
+Change call for donation.
+----------------------------
+revision 1.292
+date: 2010/01/12 05:15:53;  author: gilles;  state: Exp;  lines: +8 -7
+freshmeat rate is gone.
+paypal is good to encourage myself.
+----------------------------
+revision 1.291
+date: 2010/01/12 04:36:03;  author: gilles;  state: Exp;  lines: +10 -10
+Load Term::ReadKey when needed.
+----------------------------
+revision 1.290
+date: 2010/01/12 03:42:09;  author: gilles;  state: Exp;  lines: +7 -7
+One line per folder when printing the each folder list.
+----------------------------
+revision 1.289
+date: 2010/01/12 01:54:52;  author: gilles;  state: Exp;  lines: +6 -6
+Removed unused Date_Cmp from import.
+----------------------------
+revision 1.288
+date: 2009/09/02 20:37:22;  author: gilles;  state: Exp;  lines: +8 -6
+Request all folder list only when needed (sometimes the list is very long)
+----------------------------
+revision 1.287
+date: 2009/08/24 00:32:36;  author: gilles;  state: Exp;  lines: +6 -6
+- fixed fetch_hash() to return FLAGS as "" not () when no FLAGS set.
+(reading Mail-IMAPClient-3.19 code)
+----------------------------
+revision 1.286
 date: 2009/07/24 15:53:04;  author: gilles;  state: Exp;  lines: +10 -7
 Bug fix: allow3x is on by default (was badly done after check_lib_version())
 ----------------------------
