--- a/TODO
+++ b/TODO
@@ -1,8 +1,11 @@
 #!/bin/cat
-# $Id: TODO,v 1.65 2009/07/24 17:22:13 gilles Exp gilles $
+# $Id: TODO,v 1.68 2010/01/12 05:28:22 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
+
+
+Add option --exclude_messages_with_flag
 
 Add more information about skipped messages.
 
@@ -11,6 +14,8 @@ header was bad (empty). But it was bad for speed with big
 messages (nowadays there are always big messages in
 mailboxes). May be the best is to take a part of the
 body. Have to code this.
+
+
 
 Add an option to store flags with "FLAGS.SILENT" instead of "+FLAGS.SILENT".
 
@@ -24,7 +29,6 @@ Add Rick Romero patch with
 Take a look at Mail::IMAPTalk 
 Simon Bertrang said "way better performance, less problems, easier to use and no
 issues so far". Sounds good! 
-
 
 Post on imapsync mailing-list when a new release comes.
 
@@ -138,6 +142,16 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 Explain expunge behavior.
+
+DONE. Fix bug "Found that if folders have a space at the end of 
+the name, it will not create the folder name on the new 
+server, nor will it copy that folder's email."
+Added regression test checking this.
+Could not reproduce this bug. 
+Seems to be a old imapsync bug with 2.2.9
+
+
+DONE. (contacted Date::Manip maintener) Fix bug with Date::Manip 6.02
 
 DONE. Explain howto change only the header with --regexmess
 
