--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,24 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.299
+head: 1.300
 branch:
 locks: strict
-	gilles: 1.299
+	gilles: 1.300
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 299;	selected revisions: 299
+total revisions: 300;	selected revisions: 300
 description:
 ----------------------------
-revision 1.299	locked by: gilles;
+revision 1.300	locked by: gilles;
+date: 2010/01/16 03:34:37;  author: gilles;  state: Exp;  lines: +250 -250
+Changed name of variables. "from" replaced by imap1 "to" by imap2.
+f_* replaced by h1_*
+t_* replaced by h2_*
+Cosmetic but easier to read nd maintain.
+----------------------------
+revision 1.299
 date: 2010/01/15 00:19:32;  author: gilles;  state: Exp;  lines: +10 -10
 imapsync is no longer GPL software.
 imapsync is WTFPL software. The best licence I found.
