--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.299 $
+    $Revision: 1.300 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -301,8 +301,8 @@ IMAP SERVERS
     this section report the two lines at the begining of the output if they
     are useful to know the softwares. Example:
 
-     From software:* OK louloutte Cyrus IMAP4 v1.5.19 server ready
-     To   software:* OK Courier-IMAP ready
+     Host1 software:* OK louloutte Cyrus IMAP4 v1.5.19 server ready
+     Host2   software:* OK Courier-IMAP ready
 
     You can use option --justconnect to get those lines. Example:
 
@@ -362,5 +362,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will always be welcome.
 
-    $Id: imapsync,v 1.299 2010/01/15 00:19:32 gilles Exp gilles $
+    $Id: imapsync,v 1.300 2010/01/16 03:34:37 gilles Exp gilles $
 
