--- a/TODO
+++ b/TODO
@@ -1,9 +1,13 @@
 #!/bin/cat
-# $Id: TODO,v 1.69 2010/01/14 23:41:43 gilles Exp gilles $
+# $Id: TODO,v 1.70 2010/01/16 03:38:47 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
 
+Post on newsgroup comp.mail.imap when a new release comes.
+http://groups.google.fr/group/comp.mail.imap
+
+Post on imapsync mailing-list when a new release comes.
 
 Add option --exclude_messages_with_flag
 
@@ -17,6 +21,7 @@ body. Have to code this.
 
 
 Add an option to store flags with "FLAGS.SILENT" instead of "+FLAGS.SILENT".
+No, be "FLAGS.SILENT" the default and "+FLAGS.SILENT" an option.
 
 
 Add TLS support with patches/imapsync-1.217_tls_support.patch
@@ -28,8 +33,6 @@ Add Rick Romero patch with
 Take a look at Mail::IMAPTalk 
 Simon Bertrang said "way better performance, less problems, easier to use and no
 issues so far". Sounds good! 
-
-Post on imapsync mailing-list when a new release comes.
 
 Add an option to implement the faq entry about copying a contact folder.
 
@@ -117,9 +120,6 @@ Use examine() instead of select() in --dry mode.
 Add a method doing the switch automagicaly.
 
 Add --verbose from Kjetil jumbo patch.
-
-Post on newsgroup comp.mail.imap when a new release comes.
-http://groups.google.fr/group/comp.mail.imap
 
 Read the IMAP RFC http://www.faqs.org/rfcs/rfc3501.html
 
