--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,42 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.293
+head: 1.299
 branch:
 locks: strict
-	gilles: 1.293
+	gilles: 1.299
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 293;	selected revisions: 293
+total revisions: 299;	selected revisions: 299
 description:
 ----------------------------
-revision 1.293	locked by: gilles;
+revision 1.299	locked by: gilles;
+date: 2010/01/15 00:19:32;  author: gilles;  state: Exp;  lines: +10 -10
+imapsync is no longer GPL software.
+imapsync is WTFPL software. The best licence I found.
+----------------------------
+revision 1.298
+date: 2010/01/14 23:43:22;  author: gilles;  state: Exp;  lines: +6 -8
+Fix. Removed identical "my" declaration.
+----------------------------
+revision 1.297
+date: 2010/01/14 17:36:17;  author: gilles;  state: Exp;  lines: +13 -11
+Rewrote flags_filter(), same behavior, no regex.
+----------------------------
+revision 1.296
+date: 2010/01/14 16:57:58;  author: gilles;  state: Exp;  lines: +72 -8
+Filter flags sync with the list given by PERMANENTFLAGS on --host2
+----------------------------
+revision 1.295
+date: 2010/01/14 15:04:27;  author: gilles;  state: Exp;  lines: +10 -6
+--expunge only expunge --host1 (fixed output about that)
+----------------------------
+revision 1.294
+date: 2010/01/14 02:12:17;  author: gilles;  state: Exp;  lines: +37 -10
+Added --tmpdir option. The funny part is it's useless now.
+----------------------------
+revision 1.293
 date: 2010/01/12 05:34:27;  author: gilles;  state: Exp;  lines: +6 -6
 Change call for donation.
 ----------------------------
