--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.15 2009/06/30 03:21:17 gilles Exp gilles $
+# $Id: INSTALL,v 1.16 2010/01/14 23:41:59 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -81,6 +81,12 @@ Here is some individual module help:
 
 - Date::Manip
   perl -mDate::Manip -e ''
+
+- File::Spec
+  perl -mFile::Spec -e ''
+
+- File::Path
+  perl -mFile::Path -e ''
 
 - (Option) Perl Digest::HMAC_MD5 module
   Good for non plain text password over network.
