--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.68 2010/01/12 05:28:22 gilles Exp gilles $
+# $Id: TODO,v 1.69 2010/01/14 23:41:43 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -14,7 +14,6 @@ header was bad (empty). But it was bad for speed with big
 messages (nowadays there are always big messages in
 mailboxes). May be the best is to take a part of the
 body. Have to code this.
-
 
 
 Add an option to store flags with "FLAGS.SILENT" instead of "+FLAGS.SILENT".
@@ -46,13 +45,10 @@ Add NOOP commands to avoid timeouts.
 Start a wiki for imapsync.
 
 Add a --pidfile option.
-Add a --tmpfile  option.
-Add a --tmpdir option.
+
 Write a clean_exit() replacing each die() or exit() call.
 Add a --skipheaderinfolder option 
 See the code patches/imapsync_Cvitkovich_pidfile_tmpfile
-
-Make --skipheader be multiple
 
 Fix this:
 > - Erreur avec la traditionnelle différence entre Windows
@@ -71,9 +67,6 @@ messages, not folders."
 
 Add different levels of output to see clearly the
 problem by default.
-
-Add --justlogin --justlogin1 --justlogin2 options
-to check username and passwort.
 
 
 Add --subscribeall option.
@@ -142,6 +135,18 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 Explain expunge behavior.
+
+
+USELESS. Make --skipheader be multiple. Useless since we can
+use the or perl regex '^X-|^Date|^From'
+
+
+USELESS. Add a --tmpfile option.
+
+DONE. Add --justlogin options
+to check usernames and passwords.
+
+DONE. Add a --tmpdir option.
 
 DONE. Fix bug "Found that if folders have a space at the end of 
 the name, it will not create the folder name on the new 
