--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.293 $
+    $Revision: 1.299 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -161,9 +161,9 @@ EXIT STATUS
             done
 
 LICENSE
-    imapsync is free, gratis and open source software cover by the GNU
-    General Public License. See the GPL file included in the distribution or
-    the web site http://www.gnu.org/licenses/licenses.html
+    imapsync is free, gratis and open source software cover by the Do What
+    The Fuck You Want To Public License (WTFPL). See COPYING file included
+    in the distribution or the web site http://sam.zoy.org/wtfpl/COPYING
 
 MAILING-LIST
     The public mailing-list may be the best way to get support.
@@ -336,7 +336,7 @@ HUGE MIGRATION
     Welcome in shell programming !
 
 Hacking
-    Feel free to hack imapsync as the GPL Licence permits it.
+    Feel free to hack imapsync as the WTFPL Licence permits it.
 
 Links
     Entries for imapsync: http://www.imap.org/products/showall.php
@@ -362,5 +362,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will always be welcome.
 
-    $Id: imapsync,v 1.293 2010/01/12 05:34:27 gilles Exp gilles $
+    $Id: imapsync,v 1.299 2010/01/15 00:19:32 gilles Exp gilles $
 
