--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.72 2010/01/20 04:13:42 gilles Exp gilles $
+# $Id: TODO,v 1.73 2010/02/07 22:03:06 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -12,6 +12,11 @@ Post on imapsync mailing-list when a new release comes.
 Start a wiki for imapsync.
 
 Add a best practice migration tips document.
+
+Fix the mailing-list archive bug with From at
+the beginning of a line
+http://www.linux-france.org/prj/imapsync_list/msg00307.html
+
 
 Add "output to reflect everything that imapsync was doing".
 Not everything but flag synchronization will be nice"
