--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,54 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.303
+head: 1.310
 branch:
 locks: strict
-	gilles: 1.303
+	gilles: 1.310
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 303;	selected revisions: 303
+total revisions: 310;	selected revisions: 310
 description:
 ----------------------------
-revision 1.303	locked by: gilles;
+revision 1.310	locked by: gilles;
+date: 2010/02/26 01:24:59;  author: gilles;  state: Exp;  lines: +10 -11
+Removed modules_VERSION() call (useless)
+Replaced Phil regex with /e one.
+----------------------------
+revision 1.309
+date: 2010/02/25 23:18:04;  author: gilles;  state: Exp;  lines: +63 -65
+Better imap banner handling (first line read).
+removed sub myconnect_v2()
+Removed Mail::IMAPClient::Socket use.
+Added sub RawSocket2() (RawSocket 3.23 failed as is, do not know why)
+Added Mail::IMAPClient::Ignoresizeerrors for 2.2.9
+Honot --allowsizemismatch with 2.2.9
+----------------------------
+revision 1.308
+date: 2010/02/24 01:29:11;  author: gilles;  state: Exp;  lines: +15 -9
+Fixed STARTTLS missing imap begin line.
+----------------------------
+revision 1.307
+date: 2010/02/09 17:49:34;  author: gilles;  state: Exp;  lines: +68 -9
+Added tests_imap2_folder_name()
+'s/.*?(?:(\\(?:Answered|Flagged|Deleted|Seen|Recent|Draft)\s?)|$)/$1/g' check (good!)
+----------------------------
+revision 1.306
+date: 2010/02/07 21:38:15;  author: gilles;  state: Exp;  lines: +71 -6
+Added regression test about the "keep only" --regexflag example.
+Added debug to understand all the regexflag transformations.
+----------------------------
+revision 1.305
+date: 2010/01/20 22:26:03;  author: gilles;  state: Exp;  lines: +14 -14
+Better output.
+----------------------------
+revision 1.304
+date: 2010/01/20 22:10:24;  author: gilles;  state: Exp;  lines: +32 -23
+Added statistic about messages deleted
+Added statistic about average bandwith rate
+----------------------------
+revision 1.303
 date: 2010/01/20 04:12:52;  author: gilles;  state: Exp;  lines: +13 -12
 cosmetic changes.
 ----------------------------
