--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.303 $
+    $Revision: 1.310 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -24,8 +24,8 @@ INSTALL
      Go into the directory imapsync-x.xx and read the INSTALL file.
      The INSTALL file is also at 
      http://www.linux-france.org/prj/imapsync/INSTALL (for windows users)
-     
- The freshmeat record is at http://freshmeat.net/projects/imapsync/
+ 
+     The freshmeat record is at http://freshmeat.net/projects/imapsync/
 
 SYNOPSIS
       imapsync [options]
@@ -74,7 +74,7 @@ SYNOPSIS
                [--split1] [--split2] 
                [--reconnectretry1 <int>] [--reconnectretry2 <int>]
                [--version] [--help]
-
+  
 DESCRIPTION
     The command imapsync is a tool allowing incremental and recursive imap
     transfer from one mailbox to another.
@@ -209,6 +209,9 @@ BUGS and BUG REPORT
 
     Help us to help you: follow the following guidelines.
 
+    Read the paper "How To Ask Questions The Smart Way"
+    http://www.catb.org/~esr/faqs/smart-questions.html
+
     Before reporting bugs, read the FAQ, the README and the TODO files.
     http://www.linux-france.org/prj/imapsync/
 
@@ -246,10 +249,10 @@ IMAP SERVERS
     Success stories reported with the following 35 imap servers (software
     names are in alphabetic order):
 
-     - Archiveopteryx 2.03, 2.04, 2.09, 2.10 [dest], 3.0.0 [dest]
+     - Archiveopteryx 2.03, 2.04, 2.09, 2.10 [host2], 3.0.0 [host2]
        (OSL 3.0) http://www.archiveopteryx.org/
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
-     - CommuniGatePro server (Redhat 8.0) (Solaris)
+     - CommuniGatePro server (Redhat 8.0) (Solaris), CommuniGate Pro 5.2.17[host2] (CentOS 5.4)
      - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1, 3.0.8, 3.0.3, 4.1.1 (GPL) 
        (http://www.courier-mta.org/)
      - Critical Path (7.0.020)
@@ -265,10 +268,10 @@ IMAP SERVERS
      - David Tobit V8 (proprietary Message system).
      - DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
        2.0.7 seems buggy.
-     - Deerfield VisNetic MailServer 5.8.6 [from]
+     - Deerfield VisNetic MailServer 5.8.6 [host1]
+     - Domino (Notes) 4.61[host1], 6.5, 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 7.0.1[host1], 8.0.1[host1]
      - Dovecot 0.99.10.4, 0.99.14, 0.99.14-8.fc4, 1.0-0.beta2.7, 
        1.0.0 [dest/source] (LGPL) (http://www.dovecot.org/)
-     - Domino (Notes) 4.61[from], 6.5, 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 7.0.1 [from]
      - Eudora WorldMail v2
      - GMX IMAP4 StreamProxy.
      - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
@@ -276,7 +279,10 @@ IMAP SERVERS
      - IMail 7.15 (Ipswitch/Win2003), 8.12
      - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform)
      - Mercury 4.1 (Windows server 2000 platform)
-     - Microsoft Exchange Server 5.5, 6.0.6249.0[from], 6.0.6487.0[from], 6.5.7638.1 [dest]
+     - Microsoft Exchange Server 5.5, 6.0.6249.0[host1], 6.0.6487.0[host1], 
+       6.5.7638.1 [host2], Exchange 2007 SP1 (with Update Rollup 2), 
+       Exchange2007-EP-SP2, 
+       Exchange 2010 RTM (Release to Manufacturing) [host2]
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
      - OpenMail IMAP server B.07.00.k0 (Samsung Contact ?)
@@ -363,5 +369,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will always be welcome.
 
-    $Id: imapsync,v 1.303 2010/01/20 04:12:52 gilles Exp gilles $
+    $Id: imapsync,v 1.310 2010/02/26 01:24:59 gilles Exp gilles $
 
