--- a/Mail-IMAPClient-3.21/Changes
+++ b/Mail-IMAPClient-3.21/Changes
@@ -5,6 +5,27 @@ Changes from 2.99_01 to 3.16    made by Mark Overmeer
 Changes from 0.09    to 2.99_01 made by David Kernen
 	- Potential compatibility issues from 3.17+ highlighted with '*'
 
+version 3.21: Tue Sep 22 19:45:13 EDT 2009
+	- rt.cpan.org#49691: rewrite of fetch_hash to resolve several issues
+	  [Robert Norris]
+	  includes new tests via t/fetch_hash.t
+	- rt.cpan.org#48980: (enhancement) add support for XLIST extension
+	  [Robert Norris]
+	- rt.cpan.org#49024: NIL personal name returned by *_addresses methods
+	  [Dmitry Bigunyak]
+	- rt.cpan.org#49401: IMAPClient expunge fails (unless folder arg used)
+	  [Gary Baluha]
+	- update/clarify close and expunge documentation a little
+
+version 3.20: Fri Aug 21 17:40:40 EDT 2009
+	- added file/tests in t/simple.t
+	- added methods Rfc3501_date/Rfc3501_datetime
+	  used by deprecated methods Rfc2060_date/Rfc2060_datetime
+	  rt.cpan.org#48510: Rfc3501_date/Rfc3501_datetime methods do
+	    not exist [sedmonds]
+	- login() hack to quote an empty password
+	  rt.cpan.org#48107: Cannot LOGIN with empty password [skunk]
+
 version 3.19: Fri Jun 19 14:59:15 EDT 2009
 	- *search() backwards compat: caller must quote single arg properly
 	  rt.cpan.org#47044: $imap->search does not return [ekuemmer]
