--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.300 $
+    $Revision: 1.303 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -24,8 +24,8 @@ INSTALL
      Go into the directory imapsync-x.xx and read the INSTALL file.
      The INSTALL file is also at 
      http://www.linux-france.org/prj/imapsync/INSTALL (for windows users)
- 
-     The freshmeat record is at http://freshmeat.net/projects/imapsync/
+     
+ The freshmeat record is at http://freshmeat.net/projects/imapsync/
 
 SYNOPSIS
       imapsync [options]
@@ -42,6 +42,7 @@ SYNOPSIS
                [--host2 server2]  [--port2 <num>]
                [--user2 <string>] [--passfile2 <string>]
                [--ssl1] [--ssl2]
+               [--tls1] [--tls2]
                [--authmech1 <string>] [--authmech2 <string>] 
                [--noauthmd5]
                [--folder <string> --folder <string> ...]
@@ -73,7 +74,7 @@ SYNOPSIS
                [--split1] [--split2] 
                [--reconnectretry1 <int>] [--reconnectretry2 <int>]
                [--version] [--help]
-  
+
 DESCRIPTION
     The command imapsync is a tool allowing incremental and recursive imap
     transfer from one mailbox to another.
@@ -138,8 +139,8 @@ SECURITY
 
     imasync is not totally protected against sniffers on the network since
     passwords may be transferred in plain text if CRAM-MD5 is not supported
-    by your imap servers. Use --ssl1 and --ssl2 to enable encryption on
-    host1 and host2.
+    by your imap servers. Use --ssl1 (or --tls1) and --ssl2 (or --tls2) to
+    enable encryption on host1 and host2.
 
     You may authenticate as one user (typically an admin user), but be
     authorized as someone else, which means you don't need to know every
@@ -362,5 +363,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will always be welcome.
 
-    $Id: imapsync,v 1.300 2010/01/16 03:34:37 gilles Exp gilles $
+    $Id: imapsync,v 1.303 2010/01/20 04:12:52 gilles Exp gilles $
 
