--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,32 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.300
+head: 1.303
 branch:
 locks: strict
-	gilles: 1.300
+	gilles: 1.303
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 300;	selected revisions: 300
+total revisions: 303;	selected revisions: 303
 description:
 ----------------------------
-revision 1.300	locked by: gilles;
+revision 1.303	locked by: gilles;
+date: 2010/01/20 04:12:52;  author: gilles;  state: Exp;  lines: +13 -12
+cosmetic changes.
+----------------------------
+revision 1.302
+date: 2010/01/20 03:34:59;  author: gilles;  state: Exp;  lines: +59 -51
+Flags are now exactly synced from host1 to host2.
+Previous releases just added flags, It was a wrong behavior
+since when a \Seen flag is removed on host1 a sync have to
+remove it on host2. imapsync is not imapadd.
+----------------------------
+revision 1.301
+date: 2010/01/18 06:24:16;  author: gilles;  state: Exp;  lines: +92 -23
+Added TLSv1 support.
+----------------------------
+revision 1.300
 date: 2010/01/16 03:34:37;  author: gilles;  state: Exp;  lines: +250 -250
 Changed name of variables. "from" replaced by imap1 "to" by imap2.
 f_* replaced by h1_*
