--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.310
+head: 1.311
 branch:
 locks: strict
-	gilles: 1.310
+	gilles: 1.311
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 310;	selected revisions: 310
+total revisions: 311;	selected revisions: 311
 description:
 ----------------------------
-revision 1.310	locked by: gilles;
+revision 1.311	locked by: gilles;
+date: 2010/04/27 23:03:39;  author: gilles;  state: Exp;  lines: +35 -12
+Fixed bug in compare_lists(). Thanks to Pertti Karppinen.
+----------------------------
+revision 1.310
 date: 2010/02/26 01:24:59;  author: gilles;  state: Exp;  lines: +10 -11
 Removed modules_VERSION() call (useless)
 Replaced Phil regex with /e one.
