--- a/FAQ
+++ b/FAQ
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: FAQ,v 1.65 2010/02/26 01:07:01 gilles Exp gilles $
+# $Id: FAQ,v 1.66 2010/03/04 19:22:17 gilles Exp gilles $
 
 +------------------+
 | FAQ for imapsync |
@@ -107,7 +107,12 @@ R. - Download Mail::IMAPClient 2.2.9 at
      or if imapsync is in directory /path/
         perl -I./Mail-IMAPClient-2.2.9 /path/imapsync [...]
 
+=======================================================================
+Q. Can I use imapsync to migrate emails from pop server to imap server?
 
+R. No. 
+You can migrate emails from pop server to imap server with pop2imap:
+http://www.linux-france.org/prj/pop2imap/
 
 =======================================================================
 Q. I am interested in creating  a local clone of the IMAP on a LAN 
